--- a/css/apresentacaoAnimate.css
+++ b/css/apresentacaoAnimate.css
@@ -4,9 +4,12 @@
 @import url('https://fonts.googleapis.com/css2?family=Babylonica&family=EB+Garamond&family=Josefin+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&family=Montserrat:wght@200;300&family=Oxanium:wght@300;400;500;600;700;800&family=Pirata+One&family=Poppins:wght@100;200;400;500;700&family=Roboto:wght@100;300;400;500&family=Ubuntu:wght@300;400;500&display=swap');
 
 *{font-family: 'Poppins', sans-serif;}
+
+
 #apresentacao{
     width: 100%;
     height: 100vh; 
+    /* display:none; */
 }
 .apresentacao_animate{
     background: rgba(0, 0, 41, 1);
@@ -15,7 +18,7 @@
     align-items: center;
     justify-content: center;
     transition: 2s;
-    display: none;
+   /* display: none; */
 }
 
 .apresentacao_animate-toggle{
