--- a/css/pokemonPerfil.css
+++ b/css/pokemonPerfil.css
@@ -1,13 +1,30 @@
-#pokemon_perfil{
-    display: none;
-    justify-content: center;
-    background-image: url(../img/type-background/grama-type.svg);
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position-x: center;
-    background-size: contain;
+:root{
+ --green: rgba(99, 188, 90, 1);
+ --yellow: rgba(244, 210, 60, 1);
 }
 
+
+
+#pokemon_perfil{
+    /* display: none; */
+    justify-content: center;
+  
+}
+.background_pokemon_type img{
+ width: 100%;
+ height: 100%;
+ position: absolute;
+ z-index: -10;
+ top: -35%;
+}
+
+.icon_pokemon_type img{
+    width: 100%;
+    height: 200px;
+    position: absolute;
+    z-index: -1;
+    top: 1rem;
+}
 .container{
     padding: 1rem;
     width: 90%;
@@ -17,10 +34,7 @@
     justify-content: center;
     padding: 1rem 0rem;
     padding-top: 8rem;
-    background-image: url(../img/type-background/grama-icon.svg);
-    background-repeat: no-repeat;
-    background-position-x: center;
-    background-position-y: top;
+  
    
 }
 .pokemon_sprite img{
@@ -45,11 +59,6 @@
     font-weight: 400;
 }
 
-.pokemon_type{
-    padding: 1rem 0rem;
-    font-size: clamp( 7px, 8vw, 16px);
-}
-
 .pokemon_container_info{
     display: grid;
     grid-template-columns: 1fr 1fr;
@@ -71,4 +80,37 @@
     gap: .6rem;
     color:#3333338d;
     text-transform: uppercase;
+}
+
+.pokemon_type{
+    display: flex;
+    gap: 2rem;
+    padding: 1rem 0rem;
+}
+
+.block_description_text{
+    display: flex;
+    align-items: center;
+    gap: 1rem;
+    background:var(--green);
+    padding: .5rem 1.7rem;
+    border-radius: 30px;
+}
+
+.block_description_text p{
+    font-size: 20px;
+}
+
+.block_description_text img{
+    background: white;
+    padding: 10px;
+    border-radius: 50%;
+}
+
+
+.description_pokemon_text{
+    padding: 1rem 0rem;
+    padding-bottom: 1.5rem;
+    font-size: clamp( 7px, 8vw, 15px);
+    font-weight: 400;
 }
