--- a/css/apresentacaoAnimate.css
+++ b/css/apresentacaoAnimate.css
@@ -9,7 +9,7 @@
 #apresentacao{
     width: 100%;
     height: 100vh; 
-    display:none;
+    /* display:none; */
 }
 .apresentacao_animate{
     background: rgba(0, 0, 41, 1);
@@ -18,7 +18,7 @@
     align-items: center;
     justify-content: center;
     transition: 2s;
-   display: none;
+   /* display: none; */
 }
 
 .apresentacao_animate-toggle{
