--- a/css/pokemonPerfil.css
+++ b/css/pokemonPerfil.css
@@ -74,11 +74,36 @@
     font-size: clamp( 8px, 8vw, 17px);
     font-weight: 400;
 }
+.buttons_teste{
+    padding: 1rem 0rem;
+    width: 30%;
+    display: flex;
+    gap: 1rem;
+}
+.button_teste{
+    font-size: 15px;
+    color: #818080;
+    font-weight: 600;
+    border-radius: 10px;
+    border: none;
+    padding: 0.5rem 1rem;
+    box-shadow: -2px 3px 0 #222, -4px 6px 0 #0000007a;
+}
+
+.button_teste:active{
+    box-shadow: inset -4px 4px 0 #222;
+    font-size: 0.9rem;
+}
+
 
 .pokemon_container_info{
     display: grid;
     grid-template-columns: 1fr 1fr;
     gap: 2rem;
+}
+
+.block_pokemon_info{
+    display: flex;
 }
 
 .block_pokemon_info{
